--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "msgpack-lite": "^0.1.26"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -55,6 +56,7 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/msgpack-lite": "^0.1.11"
   }
 }
