--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
