--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.475.0",
     "msgpack-lite": "^0.1.26",
     "next": "15.3.3",
