--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.475.0",
     "msgpack-lite": "^0.1.26",
-    "next": "15.3.3",
+    "next": "^14.2.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
