--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.24",
+    "jose": "^6.1.2",
     "lucide-react": "^0.475.0",
     "msgpack-lite": "^0.1.26",
     "next": "^14.2.0",
@@ -51,6 +52,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
