--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.24",
+    "iron-session": "^8.0.4",
     "jose": "^6.1.2",
     "lucide-react": "^0.475.0",
     "msgpack-lite": "^0.1.26",
@@ -56,7 +57,8 @@
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/msgpack-lite": "^0.1.11",
